source/libopensc/opensc.d

		deprecated("Don't use this: It's old style and not necessary if pin_cmd is supported") change_reference_data_tf change_reference_data;
		deprecated("Don't use this: It's old style and not necessary if pin_cmd is supported") reset_retry_counter_tf reset_retry_counter;
		create_file_tf create_file;
		delete_file_tf delete_file;
		list_files_tf list_files;
		check_sw_tf check_sw;
		card_ctl_tf card_ctl;
		process_fci_tf process_fci;
		construct_fci_tf construct_fci;
		pin_cmd_tf pin_cmd;
		get_data_tf get_data;
		put_data_tf put_data;
		delete_record_tf delete_record;
		read_public_key_tf read_public_key;
	}
	struct sc_card_driver
	{
		immutable(char)* name;
		immutable(char)* short_name;
		sc_card_operations* ops;
		immutable(sc_atr_table)* atr_map;
		uint natrs;
		void* dll;
	}
	struct sc_thread_context_t
	{
		uint ver;
		int function(void**) create_mutex;
		int function(void*) lock_mutex;
		int function(void*) unlock_mutex;
		int function(void*) destroy_mutex;
		c_ulong function() thread_id;
	}
	struct sc_context
	{
		scconf_context* conf;
		scconf_block*[3] conf_blocks;
		char* app_name;
		int debug_;
		int paranoid_memory;
		int enable_default_driver;
		FILE* debug_file;
		char* debug_filename;
		char* preferred_language;
		list_t readers;
		sc_reader_driver* reader_driver;
		void* reader_drv_data;
		sc_card_driver*[SC_MAX_CARD_DRIVERS] card_drivers;
		sc_card_driver* forced_driver;
		sc_thread_context_t* thread_ctx;
		void* mutex;
		uint magic;
	}
	int sc_transmit_apdu(sc_card* card, sc_apdu* apdu);
	void sc_format_apdu(sc_card* card, sc_apdu* apdu, int apdu_case, int ins, int p1, int p2);
	int sc_check_apdu(sc_card* card, const(sc_apdu)* apdu);
	int sc_bytes2apdu(sc_context* ctx, const(ubyte)* buf, size_t len, sc_apdu* apdu);
	int sc_check_sw(sc_card* card, uint sw1, uint sw2);
	deprecated("Please use sc_context_create() instead") int sc_establish_context(sc_context** ctx, const(char)* app_name);
	struct sc_context_param_t
	{
		uint ver;
		const(char)* app_name;
		c_ulong flags;
		sc_thread_context_t* thread_ctx;
	}
	int sc_context_repair(sc_context** ctx);
	int sc_context_create(sc_context** ctx, const(sc_context_param_t)* parm);
	int sc_release_context(sc_context* ctx);
	int sc_ctx_detect_readers(sc_context* ctx);
	sc_reader* sc_ctx_get_reader(sc_context* ctx, uint i);
	int sc_ctx_use_reader(sc_context* ctx, void* pcsc_context_handle, void* pcsc_card_handle);
	sc_reader* sc_ctx_get_reader_by_name(sc_context* ctx, const(char)* name);
	sc_reader* sc_ctx_get_reader_by_id(sc_context* ctx, uint id);
	uint sc_ctx_get_reader_count(sc_context* ctx);
	int _sc_delete_reader(sc_context* ctx, sc_reader* reader);
	int sc_ctx_log_to_file(sc_context* ctx, const(char)* filename);
	int sc_set_card_driver(sc_context* ctx, const(char)* short_name);
	int sc_connect_card(sc_reader* reader, sc_card** card);
	int sc_disconnect_card(sc_card* card);
	int sc_detect_card_presence(sc_reader* reader);
	int sc_wait_for_event(sc_context* ctx, uint event_mask, sc_reader** event_reader, uint* event, int timeout, void** reader_states);
	int sc_reset(sc_card* card, int do_cold_reset);
	int sc_cancel(sc_context* ctx);
	int sc_lock(sc_card* card);
	int sc_unlock(sc_card* card);
	int sc_select_file(sc_card* card, const(sc_path)* path, sc_file** file);
	int sc_list_files(sc_card* card, ubyte* buf, size_t buflen);
	int sc_read_binary(sc_card* card, uint idx, ubyte* buf, size_t count, c_ulong flags);
	int sc_write_binary(sc_card* card, uint idx, const(ubyte)* buf, size_t count, c_ulong flags);
	int sc_update_binary(sc_card* card, uint idx, const(ubyte)* buf, size_t count, c_ulong flags);
	int sc_erase_binary(sc_card* card, uint idx, size_t count, c_ulong flags);
	enum 
	{
		SC_RECORD_EF_ID_MASK = 31LU,
		SC_RECORD_BY_REC_ID = 0LU,
		SC_RECORD_BY_REC_NR = 256LU,
		SC_RECORD_CURRENT = 0LU,
	}
	int sc_read_record(sc_card* card, uint rec_nr, ubyte* buf, size_t count, c_ulong flags);
	int sc_write_record(sc_card* card, uint rec_nr, const(ubyte)* buf, size_t count, c_ulong flags);
	int sc_append_record(sc_card* card, const ubyte* buf, size_t count, c_ulong flags);
	int sc_update_record(sc_card* card, uint rec_nr, const ubyte* buf, size_t count, c_ulong flags);
	int sc_delete_record(sc_card* card, uint rec_nr);
	int sc_get_data(sc_card*, uint, ubyte*, size_t);
	int sc_put_data(sc_card*, uint, const ubyte*, size_t);
	int sc_get_challenge(sc_card* card, ubyte* rndout, size_t len);
	int sc_restore_security_env(sc_card* card, int se_num);
	int sc_set_security_env(sc_card* card, const(sc_security_env)* env, int se_num);
	int sc_decipher(sc_card* card, const(ubyte)* crgram, size_t crgram_len, ubyte* out_, size_t outlen);
	int sc_compute_signature(sc_card* card, const(ubyte)* data, size_t data_len, ubyte* out_, size_t outlen);
	int sc_verify(sc_card* card, uint type, int ref_, const(ubyte)* buf, size_t buflen, int* tries_left);
	int sc_logout(sc_card* card);
	int sc_pin_cmd(sc_card* card, sc_pin_cmd_data*, int* tries_left);
	int sc_change_reference_data(sc_card* card, uint type, int ref_, const(ubyte)* old, size_t oldlen, const(ubyte)* newref, size_t newlen, int* tries_left);
	int sc_reset_retry_counter(sc_card* card, uint type, int ref_, const(ubyte)* puk, size_t puklen, const(ubyte)* newref, size_t newlen);
	int sc_build_pin(ubyte* buf, size_t buflen, sc_pin_cmd_pin* pin, int pad);
	int sc_create_file(sc_card* card, sc_file* file);
	int sc_delete_file(sc_card* card, const(sc_path)* path);
	int sc_card_ctl(sc_card* card, c_ulong command, void* arg);
	int sc_file_valid(const(sc_file)* file);
	sc_file* sc_file_new();
	void sc_file_free(sc_file* file);
	void sc_file_dup(sc_file** dest, const(sc_file)* src);
	int sc_file_add_acl_entry(sc_file* file, uint operation, uint method, c_ulong key_ref);
	const(sc_acl_entry)* sc_file_get_acl_entry(const(sc_file)* file, uint operation);
	void sc_file_clear_acl_entries(sc_file* file, uint operation);
	int sc_file_set_sec_attr(sc_file* file, const(ubyte)* sec_attr, size_t sec_attr_len);
	int sc_file_set_prop_attr(sc_file* file, const(ubyte)* prop_attr, size_t prop_attr_len);
	int sc_file_set_type_attr(sc_file* file, const(ubyte)* type_attr, size_t type_attr_len);
	int sc_file_set_content(sc_file* file, const(ubyte)* content, size_t content_len);
	int sc_path_set(sc_path* path, int type, const(ubyte)* id, size_t id_len, int index, int count);
	void sc_format_path(const(char)* path_in, sc_path* path_out);
	const(char)* sc_print_path(const(sc_path)* path);
	int sc_path_print(char* buf, size_t buflen, const(sc_path)* path);
	int sc_compare_path(const(sc_path)* patha, const(sc_path)* pathb);
	int sc_concatenate_path(sc_path* d, const(sc_path)* p1, const(sc_path)* p2);
	int sc_append_path(sc_path* dest, const(sc_path)* src);
	int sc_compare_path_prefix(const(sc_path)* prefix, const(sc_path)* path);
	int sc_append_path_id(sc_path* dest, const(ubyte)* id, size_t idlen);
	int sc_append_file_id(sc_path* dest, uint fid);
	const(sc_path)* sc_get_mf_path();
	int sc_hex_to_bin(const(char)* in_, ubyte* out_, size_t* outlen);
	int sc_bin_to_hex(const(ubyte)*, size_t, char*, size_t, int separator);
	size_t sc_right_trim(ubyte* buf, size_t len);
	scconf_block* sc_get_conf_block(sc_context* ctx, const(char)* name1, const(char)* name2, int priority);
	void sc_init_oid(sc_object_id* oid);
	int sc_format_oid(sc_object_id* oid, const(char)* in_);
	int sc_compare_oid(const(sc_object_id)* oid1, const(sc_object_id)* oid2);
	int sc_valid_oid(const(sc_object_id)* oid);
	int sc_base64_encode(const(ubyte)* in_, size_t inlen, ubyte* out_, size_t outlen, size_t linelength);
	int sc_base64_decode(const(char)* in_, ubyte* out_, size_t outlen);
	void sc_mem_clear(void* ptr, size_t len);
	void* sc_mem_alloc_secure(sc_context* ctx, size_t len);
	int sc_mem_reverse(ubyte* buf, size_t len);
	int sc_get_cache_dir(sc_context* ctx, char* buf, size_t bufsize);
	int sc_make_cache_dir(sc_context* ctx);
	int sc_enum_apps(sc_card* card);
	sc_app_info* sc_find_app(sc_card* card, sc_aid* aid);
	void sc_free_apps(sc_card* card);
	int sc_parse_ef_atr(sc_card* card);
	void sc_free_ef_atr(sc_card* card);
	int sc_update_dir(sc_card* card, sc_app_info* app);
	void sc_print_cache(sc_card* card);
	sc_algorithm_info* sc_card_find_rsa_alg(sc_card* card, uint key_length);
	sc_algorithm_info* sc_card_find_ec_alg(sc_card* card, uint field_length, sc_object_id* curve_oid);
	sc_algorithm_info* sc_card_find_gostr3410_alg(sc_card* card, uint key_length);
	scconf_block* sc_match_atr_block(sc_context* ctx, sc_card_driver* driver, sc_atr* atr);
	uint sc_crc32(ubyte* value, size_t len);
	void sc_remote_data_init(sc_remote_data* rdata);
	int sc_copy_ec_params(sc_ec_parameters*, sc_ec_parameters*);
	struct sc_card_error
	{
		uint SWs;
		int errorno;
		const(char)* errorstr;
	}
	__gshared const(char)* sc_get_version();
	__gshared sc_card_driver* sc_get_iso7816_driver();
}
